--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ phone: 010-3496-4310
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: never
 
 # Social links
 # twitter_username: jekyllrb
